# Teaching-HEIGVD-AMT-2016-Gamification/spring-server/src/main/resources/api-spec.yaml
@@ -21,7 +21,7 @@ paths:
   /events:
     post:
       parameters:
-        - name: event
+        - name: eventDTO
           in: body
           description: The info required to create an event
           schema:
@@ -445,6 +445,10 @@ definitions:
   rulePost:
     type: object
     properties:
+      conditions:
+        type: array
+        items:
+          type: string
       eventType:
         type:  string
       awardBadgeId:
@@ -453,9 +457,15 @@ definitions:
       awardPointScaleId:
         type: integer
         format: int64
-      numberOfPoint:
+      point:
         type: integer
         format: int64
+      properties:
+        type: array
+        items:
+          type: integer
+          format: int64
+        
 
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 # pointScale
@@ -465,9 +475,6 @@ definitions:
     properties:
       name:
         type: string
-      maxPoint:
-        type: integer
-        format: int64
 
   pointScaleGet:
     type: object
@@ -502,6 +509,10 @@ definitions:
         format: int64
       eventType:
         type: string
+      properties:
+        type: array
+        items:
+          type: string
       
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 # Login
